# VoiceIQ

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
backend/: README.md  __init__.py  app.py  config.py  pyproject.toml  requirements.txt
backend/core/: answer_engine.py  ingest.py  rag.py
backend/data/: chunks.json  pages.json
backend/llms/: __init__.py  deepseek.py  gemini.py  kimi.py
backend/llms/prompts/: prompt.txt
backend/voice/: __init__.py  stt.py  tts.py
frontend/: README.md  config.js  index.html
