[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41", "pip>=23.2"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceiq"
version = "0.1.0"
description = "Voice-enabled AI agent with multi-LLM support"

dependencies = [
    "fastapi",
    "uvicorn",
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "sentence-transformers==2.6.1",
    "numpy==1.26.4",
    "scikit-learn==1.4.0",
    "gtts",
    "deepgram-sdk"
]

[tool.setuptools]
packages = ["backend"]
